unpackaged/main/default/objects/Country_Attribute__mdt/Country_Attribute__mdt.object-meta.xml
<CustomObject>
    <label>Country Attribute</label>
    <pluralLabel>Country Attributes</pluralLabel>
</CustomObject>