unpackaged/main/default/objects/Country_Attribute__mdt/fields/Expired_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expired_Hours__c</fullName>
    <label>Expired Hours</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>