unpackaged/main/default/objects/Country_Attribute__mdt/fields/Expired_Hours_Before_Ready_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Expired_Hours_Before_Ready_for_Payment__c</fullName>
    <label>Expired Hours Before Ready for Payment</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>