unpackaged/main/default/objects/Country_Attribute__mdt/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <label>Payment Link</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>