unpackaged/main/default/objects/Country_Attribute__mdt/listViews/Country_Attribute_View.listView-meta.xml
<ListView>
    <fullName>Country_Attribute_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Expired_Hours_Before_Ready_for_Payment__c</columns>
    <columns>Expired_Hours__c</columns>
    <columns>Payment_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>Country Attribute View</label>
</ListView>